@@ -8,6 +8,7 @@ Performance:
 * Close pull request 488 - Speed up field construction & comparison (bpot)
 
 Bugs:
+* Fix that declaring an html_part but no text_part would use multipart/alternative anyway (jeremy)
 * Close pull request 487 - Extract comments from group email addresses (bpot)
 * Close pull request 481 - Correctly quote filename attributes (bpot)
 * Close pull request 471 - Fix Ruby 1.8 build when UTF16/32 default to little-endian (kennyj)
